[nova] queens support

--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -42,6 +42,21 @@ spec:
       region: {{ .Values.global.region }}
       url: https://{{ include "ironic_api_endpoint_host_public" .}}
 
+  quota_class_sets:
+    flavors:
+      instances_zg1bcm1.medium: 0
+      instances_zh0hpe1.large: 0
+      instances_zh1vic1.small: 0
+      instances_zh1vic1.medium: 0
+      instances_zh2vic1.medium: 0
+      instances_zh2mlx1.large: 0
+      instances_zh1emx1.large: 0
+      instances_zh1emx1.xlarge: 0
+      instances_zh2mlx1.xlarge: 0
+      instances_zh2mlx1.1xlarge: 0
+      instances_zh2mlx1.2xlarge: 0
+      instances_zh2mlx1.3xlarge: 0
+
   flavors:
   - name: "zg1bcm1.medium"
     id: "910"
