--- a/openstack/nova/templates/etc-configmap.yaml
+++ b/openstack/nova/templates/etc-configmap.yaml
@@ -24,6 +24,8 @@ data:
   nova_audit_map.yaml: |
 {{ include (print .Template.BasePath "/etc/_nova_audit_map.yaml.tpl") . | indent 4 }}
 {{- end }}
+  sudoers: |
+{{ include (print .Template.BasePath "/etc/_sudoers.tpl") . | indent 4 }}
   rootwrap.conf: |
 {{ include (print .Template.BasePath "/etc/_rootwrap.conf.tpl") . | indent 4 }}
   sudoers: |
@@ -38,3 +40,6 @@ data:
   watcher.yaml: |
 {{ include (print .Template.BasePath "/etc/_watcher.yaml.tpl") . | indent 4 }}
 {{- end }}
+  vspc.conf: |
+{{ include (print .Template.BasePath "/etc/_vspc.conf.tpl") . | indent 4 }}
+
