--- a/openstack/nova/templates/db-init-configmap.yaml
+++ b/openstack/nova/templates/db-init-configmap.yaml
@@ -17,4 +17,8 @@ data:
     CREATE DATABASE {{.Values.apidbName}};
     CREATE ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{.Values.apidbPassword}}' LOGIN;
     GRANT ALL PRIVILEGES ON DATABASE {{.Values.apidbName}} TO {{.Values.apidbUser}};
+
+    CREATE DATABASE {{.Values.cell0dbName}};
+    CREATE ROLE {{.Values.cell0dbUser}} WITH ENCRYPTED PASSWORD '{{.Values.cell0dbPassword | default .Values.apidbPassword}}' LOGIN;
+    GRANT ALL PRIVILEGES ON DATABASE {{.Values.cell0dbName}} TO {{.Values.cell0dbUser}};
 {{- end }}
