--- a/openstack/nova/templates/db-maintain-configmap.yaml
+++ b/openstack/nova/templates/db-maintain-configmap.yaml
@@ -10,7 +10,8 @@ metadata:
 
 data:
   db-maintain.sql: |
+    CREATE EXTENSION IF NOT EXISTS pg_stat_statements;
     ALTER ROLE {{.Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{.Values.global.dbPassword}}';
     ALTER ROLE {{.Values.apidbUser}} WITH ENCRYPTED PASSWORD '{{.Values.apidbPassword}}';
     ALTER ROLE {{.Values.postgresql.user}} WITH ENCRYPTED PASSWORD '{{.Values.postgresql.postgresPassword}}';
-{{- end }}
+{{ end }}
