--- a/openstack/nova/templates/hypervisors/hypervisors-ironic.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-ironic.yaml
@@ -4,7 +4,9 @@
   {{- if ne $i 0 }}
 ---
   {{- end }}
-  {{- tuple $envAll $hypervisor | include "ironic_deployment" }}
+
+{{ tuple $envAll $hypervisor | include "ironic_deployment" }}
 ---
-  {{- tuple $envAll $hypervisor | include "ironic_configmap" }}
+
+{{ tuple $envAll $hypervisor | include "ironic_configmap" }}
 {{- end }}
