--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
@@ -42,4 +42,8 @@ template: |
       {{- if (or (not (hasKey .Values.compute.defaults.vmware "pbm_enabled")) (not .Values.compute.defaults.vmware.pbm_enabled)) }}
       datastore_regex = {= datastore_regex | quote =}
       {{- end }}
-{{ end }}
+      {{- if .Values.vspc.enabled }}
+      serial_port_service_uri = vmware-vspc
+      serial_port_proxy_uri = telnet://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.telnet.portExternal }}
+      {{- end }}
+  {{ end }}
