[nova] working migration to pike->queens/rocky

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -3,7 +3,6 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 global:
-  dbUser: nova
   novaApiPortAdmin: '8774'
   novaApiPortInternal: '8774'
   novaApiPortPublic: '443'
@@ -73,7 +72,12 @@ pod:
 debug: "True"
 
 dbName: nova
+dbUser: nova
 dbPassword: null
+
+cell0dbName: nova_cell0
+cell0dbUser: nova_cell0
+cell0dbPassword: null
 
 apidbName: nova_api
 apidbUser: nova_api
@@ -445,6 +449,9 @@ logging:
         root:
             handlers: stdout, sentry
             level: WARNING
+        migrate:
+            handlers: stdout, sentry
+            level: INFO
         nova:
             handlers: stdout, sentry
             level: INFO
