--- a/openstack/nova/templates/bin-configmap.yaml
+++ b/openstack/nova/templates/bin-configmap.yaml
@@ -10,3 +10,6 @@ data:
 {{ (.Files.Glob "bin/*").AsConfig | indent 2 }}
   common.sh: |
 {{ include "common.sh" .| indent 4 }}
+  db-migrate: |
+{{ include (print .Template.BasePath "/bin/_db-migrate.tpl") . | indent 4 }}
+
