loci support for nova (default disabled)

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -87,13 +87,19 @@ portMetrics: '9102'
 
 sentry_dsn: DEFINE_IN_REGION_CHART
 
+# Enable to switch to loci :)
+loci: false
+
 #TODO we need to move to global or find another way to share image versions
+imageNameNeutron: loci-neutron
+imageVersionNeutronServerM3: null
 imageVersionNeutronServer: null
 imageVersionNeutronOpenvswitchAgent: null
-imageVersionOpenvswitchVswitchd: null
-imageVersionOpenvswitchDbServer: null
+imageVersionNeutronOpenvswitchVswitchd: null
+imageVersionNeutronOpenvswitchDbServer: null
 
-imageVersion: null
+imageNameNova: loci-nova
+imageVersionNova: null
 imageVersionNovaApi: null
 imageVersionNovaCompute: null
 imageVersionNovaLibvirt: null
