--- a/openstack/nova/templates/migration-job.yaml
+++ b/openstack/nova/templates/migration-job.yaml
@@ -15,7 +15,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: nova-migration
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-nova-api:{{.Values.imageVersionNovaApi | default .Values.imageVersion | required "Please set nova.imageVersion or similar" }}
+          image: {{ tuple . "api" | include "container_image_nova" }}
           imagePullPolicy: IfNotPresent
           command:
             - kubernetes-entrypoint
