--- a/openstack/nova/templates/placement-api-deployment.yaml
+++ b/openstack/nova/templates/placement-api-deployment.yaml
@@ -38,7 +38,7 @@ spec:
 {{- end }}
       containers:
         - name: nova-placement
-          image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-nova-placement-api:{{.Values.imageVersionNovaPlacementApi | default .Values.imageVersion | required "Please set placement version or similar"}}
+          image: {{ tuple . "placement-api" | include "container_image_nova" }}
           imagePullPolicy: IfNotPresent
           command:
             - dumb-init
