[cinder] Provide /etc/cinder/rootwrap.d/volumes.filters
This fixes parts of to CCM-6263.

--- a/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
+++ b/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
@@ -76,6 +76,10 @@ template: |{{`
             subPath: rootwrap.conf
             readOnly: true
           - name: cinder-etc
+            mountPath: /etc/cinder/rootwrap.d/volume.filters
+            subPath: volume.filters
+            readOnly: true
+          - name: cinder-etc
             mountPath: /etc/cinder/logging.ini
             subPath: logging.ini
             readOnly: true
