--- a/openstack/cinder/templates/etc-configmap.yaml
+++ b/openstack/cinder/templates/etc-configmap.yaml
@@ -14,6 +14,8 @@ data:
 {{ include (print $.Template.BasePath "/etc/_cinder.conf.tpl") . | indent 4 }}
   rootwrap.conf: |
 {{ include (print .Template.BasePath "/etc/_rootwrap.conf.tpl") . | indent 4 }}
+  volume.filters: |
+{{ include (print .Template.BasePath "/etc/_volume.filters.tpl") . | indent 4 }}
   policy.json: |
 {{ include (print $.Template.BasePath "/etc/_cinder-policy.json.tpl") . | indent 4 }}
 {{- if .Values.audit.enabled }}
