added vspc and console mksproxy

--- a/openstack/nova/templates/etc-configmap.yaml
+++ b/openstack/nova/templates/etc-configmap.yaml
@@ -38,3 +38,6 @@ data:
   watcher.yaml: |
 {{ include (print .Template.BasePath "/etc/_watcher.yaml.tpl") . | indent 4 }}
 {{- end }}
+  vspc.conf: |
+{{ include (print .Template.BasePath "/etc/_vspc.yaml.tpl") . | indent 4 }}
+
