--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -87,8 +87,10 @@ portMetrics: '9102'
 
 sentry_dsn: DEFINE_IN_REGION_CHART
 
-# Enable to switch to loci :)
-loci: false
+# Use loci only for neutron
+loci:
+  neutron: true
+  nova: false
 
 #TODO we need to move to global or find another way to share image versions
 imageNameNeutron: loci-neutron
@@ -111,6 +113,15 @@ imageVersionNovaSpicehtml5proxy: null
 imageVersionNovaScheduler: null
 imageVersionNovaPlacementApi: null
 
+vspc:
+  enabled: true
+  port: 1333
+  pvc:
+    existingClaim: null
+    accessMode: ReadWriteMany
+    size: 10Gi
+
+
 # I would move all that to the neutron deployment
 neutron: {}
 
@@ -125,9 +136,9 @@ consoles:
     portInternal: '6083'
   shellinabox:
     portInternal: '6084'
-
-vspc:
-  enabled: false
+# enable mksproxy if upgraded all regions to queens
+#  mks:
+#    portInternal: '6085'
 
 scheduler:
   driver: "filter_scheduler"
