--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -114,8 +114,12 @@ imageVersionNovaScheduler: null
 imageVersionNovaPlacementApi: null
 
 vspc:
-  enabled: true
-  port: 1333
+  enabled: false
+  portInternal: 1333
+  portExternal: 1333
+  nodeIP: null
+  url: vmware-vspc
+  version: "20181101141623"
   pvc:
     existingClaim: null
     accessMode: ReadWriteMany
@@ -476,6 +480,9 @@ logging:
             handlers: stdout, sentry
             level: INFO
         eventlet.wsgi.server:
+            handlers: stdout, sentry
+            level: INFO
+        oslo.privsep:
             handlers: stdout, sentry
             level: INFO
         suds:
