--- a/openstack/neutron/templates/vct-dvs-agent-configmap.yaml
+++ b/openstack/neutron/templates/vct-dvs-agent-configmap.yaml
@@ -1,8 +1,8 @@
-{{- if .Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1" }}
+{{- if and (.Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1") (contains ",dvs" .Values.ml2_mechanismdrivers )}}
 apiVersion: vcenter-operator.stable.sap.cc/v1
 kind: VCenterTemplate
 metadata:
-  name: 'vcenter-cluster-neutron-ml2-vmware-configmap'
+  name: 'neutron-ml2-vmware-configmap'
   scope: 'cluster'
   jinja2_options:
     variable_start_string: '{='
@@ -19,8 +19,9 @@ template: |
   data:
     ml2-vmware.ini: |
       [DEFAULT]
+      # The agent binds only port with the same host
       host = nova-compute-{= name =}
-      backdoor_socket=/var/lib/neutron/eventlet_backdoor.socket
+      backdoor_socket = /var/lib/neutron/eventlet_backdoor.socket
 
       [securitygroup]
       firewall_driver = networking_dvs.plugins.ml2.drivers.mech_dvs.agent.dvs_firewall.DvsSecurityGroupsDriver
