fix rebase errors

--- a/openstack/nova/templates/vspc-pvc.yaml
+++ b/openstack/nova/templates/vspc-pvc.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.vspc.enabled }}
-{{- if not .Values.vspc.existingClaim -}}
+{{- if not .Values.vspc.pvc.existingClaim -}}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
