[ironic] The config seems to be case sensitive

--- a/openstack/ironic/templates/conductors_kq.yaml
+++ b/openstack/ironic/templates/conductors_kq.yaml
@@ -27,10 +27,10 @@ python: |
             block = {
                 'name': block_name,
                 'conductor': {'conductor_group': block_name},
-                'default': {}
+                'DEFAULT': {}
             }
             blocks[block_name] = block
-        default = block['default']
+        default = block['DEFAULT']
         append_item(default, 'enabled_hardware_types', node.driver)
 
         for k in node.keys():
