--- a/openstack/ironic/templates/conductors_kt.yaml
+++ b/openstack/ironic/templates/conductors_kt.yaml
@@ -7,7 +7,7 @@ metadata:
 requirements:
 - name: ironic-baremetal-blocks
 template: |
-    {{- $conductor := dict "name" "{{block.name}}" "default" (dict) "conductor" (dict) "pxe" (dict) "deploy" (dict) "jinja2" true }}
+    {{- $conductor := dict "name" "{{block.name}}" "DEFAULT" (dict) "conductor" (dict) "pxe" (dict) "deploy" (dict) "jinja2" true }}
     {{- $conductor := merge $conductor .Values.conductor.defaults }}
     {% for block in blocks %}
 {{- tuple . $conductor | include "ironic_conductor_deployment" | indent 4 }}
