[swift] metric mapping for async_pendings_detail

--- a/openstack/swift/etc/statsd-exporter.yaml
+++ b/openstack/swift/etc/statsd-exporter.yaml
@@ -108,6 +108,11 @@ mappings:
   name: swift_object_replicator
   labels:
     action: $1
+- match: swift.object-server.async_pendings.project.*.*
+  name: swift_async_pendings_detail
+  labels:
+    project_id: $1
+    container:  $2
 
   ##############################################################################
   # remove superfluous "timing" word from timer names
