adds option to silence for 24h

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -109,6 +109,10 @@ data:
               value: {{"'{{template \"slack.sapcc.acknowledge.actionValue\" . }}'"}}
             - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
               type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
+              text: {{"'{{template \"slack.sapcc.silence1Day.actionText\" . }}'"}}
+              value: {{"'{{template \"slack.sapcc.silence1Day.actionValue\" . }}'"}}
+            - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
+              type: {{"'{{template \"slack.sapcc.actionType\" . }}'"}}
               text: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionText\" . }}'"}}
               value: {{"'{{template \"slack.sapcc.silenceUntilMonday.actionValue\" . }}'"}}
             - name: {{"'{{template \"slack.sapcc.actionName\" . }}'"}}
