--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -56,9 +56,9 @@ vasa_exporter:
   enabled: False
   docker_repo: DEFINED-IN-REGION-CHART
   image_version: DEFINED-IN-REGION-CHART
-  prometheus_port: "9102"
+  prometheus_port: 9102
   vp_host: DEFINED-IN-REGION-CHART
-  vp_port: "8143"
+  vp_port: 8143
   vp_user: administrator
   vp_pass: DEFINED-IN-REGION-CHART
   vc_host: DEFINED-IN-REGION-CHART
