--- a/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
@@ -4,7 +4,7 @@ apiVersion: extensions/v1beta1
 metadata:
   name: vasa-exporter
   namespace: monsoon3
-  labels$global_values:
+  labels:
     system: openstack
     service: metrics
 
