remove unnecessary swiftreseller role assignments

--- a/openstack/swift/templates/seeds.yaml
+++ b/openstack/swift/templates/seeds.yaml
@@ -15,9 +15,6 @@ metadata:
     type: seed
 spec:
   requires:
-  #- monsoon3/keystone-seed                 # uncomment once keystone is deployed via its own helm-charts chart
-  #- monsoon3/glance-seed                   # uncomment once glance is deployed via its own helm-charts chart
-  #- monsoon3/ironic-seed                   # uncomment once ironic is deployed via its own helm-charts chart
   - monsoon3/domain-default-seed
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-monsoon3-seed
@@ -47,10 +44,8 @@ spec:
     users:
     - name: admin
       roles:
-      - domain: Default
-        role: swiftreseller
       - project: admin
-        role: swiftreseller
+        role: swiftreseller # used by openstack-seeder to create Swift accounts
     - name: swift
       description: 'Swift Service'
       password: '{{ $cluster.swift_service_password }}'
@@ -60,33 +55,19 @@ spec:
     - name: swift_dispersion
       description: 'Swift Dispersion'
       password: {{ $.Values.dispersion_password }}
-    - name: ironic
-      roles:
-      - project: service
-        role: swiftreseller
-
-    groups:
-    - name: administrators
-      roles:
-      - domain: Default
-        role: swiftreseller
-      - project: admin
-        role: swiftreseller
 
   - name: ccadmin
     projects:
     - name: cloud_admin
       roles:
-      - user: admin@Default
-        role: swiftreseller
       - group: CCADMIN_CLOUD_ADMINS
         role: swiftreseller
     - name: master # Swift account is enabled in swift-utils-seed
       roles:
       - group: CCADMIN_CLOUD_ADMINS
-        role: swiftreseller
+        role: swiftoperator
       - group: CCADMIN_DOMAIN_ADMINS
-        role: swiftreseller
+        role: swiftoperator
       - user: db_backup@Default
         role: swiftoperator
       - user: docker_registry@Default
