quote the port and full path to script

--- a/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
@@ -33,8 +33,8 @@ spec:
           command:
             - python
           args:
-            - vasa-exporter.py
-            - {{ .Values.vasa_exporter.prometheus_port }}
+            - /vasa-exporter/vasa_exporter.py
+            - {{ .Values.vasa_exporter.prometheus_port | quote }}
             - /config/vasa_exporter.cfg
           volumeMounts:
             - name: config
