--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -44,6 +44,8 @@ extensions:
   pg_stat_statements:
     max: 1000
     track: all
+  wal2json:
+    info: this plugin needs to be deployed for Debezium
 
 ## postgres image repository
 image: "postgres"
