--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -48,11 +48,11 @@ extensions:
     info: this plugin needs to be deployed for Debezium
 
 ## postgres image repository
-image: "postgres"
+image: "debezium/postgres"
 ## postgres image version
 ## ref: https://hub.docker.com/r/library/postgres/tags/
 ##
-imageTag: "9.5.4"
+imageTag: "9.6"
 
 ## Specify a imagePullPolicy
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
