vasa removed quotes

--- a/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
@@ -13,10 +13,10 @@ data:
     [Default]
     host = {{ .Values.vasa_exporter.vp_host }}
     port = {{ .Values.vasa_exporter.vp_port }}
-    vp_user = {{ .Values.vasa_exporter.vp_user | quote }}
-    vp_pass = {{ .Values.vasa_exporter.vp_pass | quote }}
-    vc_user = {{ .Values.vasa_exporter.vc_user | quote }}
-    vc_pass = {{ .Values.vasa_exporter.vc_pass | quote }}
+    vp_user = {{ .Values.vasa_exporter.vp_user }}
+    vp_pass = {{ .Values.vasa_exporter.vp_pass }}
+    vc_user = {{ .Values.vasa_exporter.vc_user }}
+    vc_pass = {{ .Values.vasa_exporter.vc_pass }}
     vc_host = {{ .Values.vasa_exporter.vc_host }}
 {{- end }}
 
