--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -48,7 +48,7 @@ data:
       - receiver: slack_by_tier_and_severity
         continue: true
         match_re:
-          tier: openstack|kubernetes|kubernikus|baremetal
+          tier: openstack|kubernetes|kubernikus|metal
           severity: info|warning|critical
           region: admin|qa-de-1|ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3|k-qa-de-1|k-ap-ae-1|k-ap-au-1|k-ap-cn-1|k-ap-jp-1|k-ap-jp-2|k-ap-sa-1|k-eu-de-1|k-eu-de-2|k-eu-nl-1|k-eu-ru-1|k-la-br-1|k-na-ca-1|k-na-us-1|k-na-us-3
 
@@ -70,12 +70,12 @@ data:
         match_re:
           alertname: RegionalInterconnect.*
 
-      - receiver: pagerduty_baremetal
+      - receiver: pagerduty_metal
         continue: false
         match_re:
           severity: critical
           region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
-          tier: baremetal
+          tier: metal
 
       - receiver: pagerduty_hypervisor
         continue: false
@@ -211,9 +211,9 @@ data:
             Playbook: {{"'{{template \"pagerduty.sapcc.playbook\" . }}'"}}
             firing: {{"'{{ template \"pagerduty.sapcc.firing\" . }}'"}}
 
-    - name: pagerduty_baremetal
+    - name: pagerduty_metal
       pagerduty_configs:
-        - service_key: {{ default "MISSING" .Values.pagerduty.baremetal.service_key | quote }}
+        - service_key: {{ default "MISSING" .Values.pagerduty.metal.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
