prime stargate. adds new routes, receiver.

--- a/global/prometheus-alertmanager/values.yaml
+++ b/global/prometheus-alertmanager/values.yaml
@@ -26,7 +26,7 @@ cluster:
 
 slack:
   webhook_url: DEFINED-IN-SECRETS
-  devnull_webhook_url: DEFINED-IN-SECRETS
+  stargate_webhook_url: DEFINED-IN-SECRETS
 
 # pagerduty service keys defined in secrets
 pagerduty: {}
