load metal alerts

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -28,9 +28,9 @@ data:
 {{ printf "%s" $bytes | indent 4 }}
   {{- end }}
   {{- end}}
-  # add baremetal alerts
-  {{- if .Values.alerting.baremetal }}
-  {{- range $path, $bytes := .Files.Glob "baremetal-*.alerts" }}
+  # add metal alerts
+  {{- if .Values.alerting.metal }}
+  {{- range $path, $bytes := .Files.Glob "metal-*.alerts" }}
   {{ printf "%s" $path }}: |
 {{ printf "%s" $bytes | indent 4 }}
   {{- end }}
