--- a/system/kube-monitoring/charts/prometheus-frontend/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/values.yaml
@@ -23,5 +23,5 @@ alerting:
   kubernetes: true
   # disable openstack alerts by setting `false` here
   openstack: true
-  # disable baremetal alerts by setting `false` here
-  baremetal: true
+  # disable metal alerts by setting `false` here
+  metal: true
