vasa metrics to the front

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -143,6 +143,7 @@ data:
           - '{__name__=~"^swift_.+"}'
           - '{__name__=~"^unbound_.+"}'
           - '{__name__=~"^up"}'
+          - '{__name__=~"^vasa"}'
           - '{__name__=~"^vice_president_.+"}'
           - '{__name__=~"^vcenter_datastore_.+$"}'
           - '{__name__=~"^vcenter_vcenter_api_session_info$"}'
