--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -248,6 +248,8 @@ spec:
               value: {{ .Values.dns_zone_name | quote }}
             - name: CANARY_FS_AVAILABILITY_ZONES
               value: {{ .Values.fs_availability_zones | quote }}
+            - name: CANARY_CINDER_AVAILABILITY_ZONES
+              value: {{ .Values.cinder.availability_zones | quote }}
             - name: CANARY_CINDER_BLOCK_COUNT
               value: {{ .Values.cinder.block_count | quote }}
             - name: CANARY_CINDER_DD_TIMEOUT
