--- a/openstack/blackbox/charts/blackbox-tests-canary/values.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/values.yaml
@@ -16,6 +16,7 @@ automation_id: DEFINED-IN-REGION-SECRETS
 fs_availability_zones: DEFINED-IN-REGION-SECRETS
 osprofiler: false
 cinder:
+  availability_zones: DEFINED-IN-REGION-SECRETS
   block_count: DEFINED-IN-REGION-SECRETS
   dd_timeout: DEFINED-IN-REGION-SECRETS
 parallel:
