--- a/openstack/nova/templates/flavor-seed.yaml
+++ b/openstack/nova/templates/flavor-seed.yaml
@@ -4,6 +4,29 @@ kind: "OpenstackSeed"
 metadata:
   name: nova-flavor-seed
 spec:
+  quota_class_sets:
+    flavors:
+      instances_m1.tiny: 0
+      instances_m1.small: 0
+      instances_m1.xsmall: 0
+      instances_m1.medium: 0
+      instances_m1.xmedium: 0
+      instances_m1.large: 0
+      instances_m1.xlarge: 0
+      instances_m1.xlarge_cpu: 0
+      instances_m1.2xlarge: 0
+      instances_m1.4xlarge: 0
+      instances_m1.10xlarge: 0
+      instances_x1.memory: 0
+      instances_x1.2xmemory: 0
+      instances_x1.4xmemory: 0
+      instances_x1.8xmemory: 0
+      instances_m2.large: 0
+      instances_m2.xlarge: 0
+      instances_m2.2xlarge: 0
+      instances_m2.2xlarge_cpu: 0
+      instances_m2.3xlarge: 0
+      instances_m2.4xlarge: 0
   flavors:
   - name: "m1.tiny"
     id: "10"
