--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
@@ -44,6 +44,6 @@ template: |
       {{- end }}
       {{- if .Values.vspc.enabled }}
       serial_port_service_uri = vmware-vspc
-      serial_port_proxy_uri = telnet://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.portExternal }}
+      serial_port_proxy_uri = telnet://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.telnet.portExternal }}
       {{- end }}
   {{ end }}
