--- a/openstack/nova/templates/vspc-service.yaml
+++ b/openstack/nova/templates/vspc-service.yaml
@@ -15,8 +15,12 @@ spec:
   ports:
     - name: vspc
       protocol: TCP
-      port: {{.Values.vspc.portExternal}}
-      targetPort: {{.Values.vspc.portInternal}}
+      port: {{.Values.vspc.telnet.portExternal}}
+      targetPort: {{.Values.vspc.telnet.portInternal}}
+    - name: web
+      protocol: TCP
+      port: {{.Values.vspc.web.portExternal}}
+      targetPort: {{.Values.vspc.web.portInternal}}
 {{- if .Values.vspc.nodeIP }}
   externalIPs:
     - {{ .Values.vspc.nodeIP }}
