--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -115,11 +115,15 @@ imageVersionNovaPlacementApi: null
 
 vspc:
   enabled: false
-  portInternal: 1333
-  portExternal: 1333
+  telnet:
+    portInternal: 1333
+    portExternal: 1333
+  web:
+    portInternal: 1334
+    portExternal: 1334
   nodeIP: null
   url: vmware-vspc
-  version: "20181101141623"
+  version: "20181123173748"
   pvc:
     existingClaim: null
     accessMode: ReadWriteMany
