--- a/openstack/swift/templates/ingress.yaml
+++ b/openstack/swift/templates/ingress.yaml
@@ -23,7 +23,7 @@ spec:
   tls:
      - secretName: tls-swift-{{$cluster.name}}
        hosts: [{{$cluster.endpoint_host}}.{{$.Values.global.region}}.{{$.Values.global.tld}}
-       {{- range $index, $san := $cluster.sans }},{{$san}}.{{$.Values.global.region}}.{{$.Values.global.tld}}{{ end }}]
+       {{- range $index, $san := $cluster.sans }}, {{ printf "%s.%s.%s" $san $.Values.global.region $.Values.global.tld | quote }}{{ end }}]
   # the following is mandatory in an ingress resource, but will be ignored by the vice-president
   rules:
     - host: {{$cluster.endpoint_host}}.{{$.Values.global.region}}.{{$.Values.global.tld}}
