[ironic] Inspector is its own project
By convention, each project stores its files in a config file named as the project first,
the name of the executable second.

--- a/openstack/ironic/templates/inspector-deployment.yaml
+++ b/openstack/ironic/templates/inspector-deployment.yaml
@@ -39,7 +39,7 @@ spec:
         - kubernetes-entrypoint
         env:
         - name: COMMAND
-          value: "ironic-inspector --config-file /etc/ironic/ironic.conf"
+          value: "ironic-inspector"
         - name: NAMESPACE
           value: {{ .Release.Namespace }}
         - name: DEPENDENCY_SERVICE
@@ -56,15 +56,11 @@ spec:
             fieldRef:
               fieldPath: metadata.name
         volumeMounts:
-        - mountPath: /etc/ironic
+        - mountPath: /etc/ironic-inspector
           name: etcironic
-        - mountPath: /etc/ironic/ironic.conf
+        - mountPath: /etc/ironic-inspector/ironic-inspector.conf
           name: ironic-inspector-etc
-          subPath: ironic.conf
-          readOnly: true
-        - mountPath: /etc/ironic/policy.json
-          name: ironic-etc
-          subPath: policy.json
+          subPath: ironic-inspector.conf
           readOnly: true
         - mountPath: /etc/ironic-inspector/rootwrap.conf
           name: ironic-etc
@@ -74,7 +70,7 @@ spec:
           name: ironic-inspector-rootwrap
           subPath: ironic-inspector-rootwrap
           readOnly: true
-        - mountPath: /etc/ironic/logging.ini
+        - mountPath: /etc/ironic-inspector/logging.ini
           name: ironic-etc
           subPath: logging.ini
           readOnly: true
