--- a/openstack/ironic/templates/inspector-db-migration-job.yaml
+++ b/openstack/ironic/templates/inspector-db-migration-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: ironic-db-migration
+  name: ironic-inspector-db-migration
   labels:
     system: openstack
     type: job
@@ -12,7 +12,7 @@ spec:
     spec:
       initContainers:
       - name: "kubernetes-entrypoint"
-        image: "{{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-ironic-api:{{.Values.imageVersionIronicApi | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}"
+        image: "{{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-ironic-inspector:{{.Values.imageVersionIronicInspector | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}"
         imagePullPolicy: "IfNotPresent"
         command: ["kubernetes-entrypoint"]
         env:
@@ -24,8 +24,8 @@ spec:
           value: "true"
       restartPolicy: OnFailure
       containers:
-      - name: ironic-dbsync
-        image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-ironic-api:{{.Values.imageVersionIronicApi | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}
+      - name: dbsync
+        image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-ironic-inspector:{{.Values.imageVersionIronicInspector | default .Values.imageVersion | required "Please set ironic.imageVersion or similar"}}
         imagePullPolicy: IfNotPresent
         command:
         - dumb-init
@@ -34,40 +34,39 @@ spec:
         - -c
         - |
           set -e
-          ironic-dbsync online_data_migrations
-          ironic-dbsync upgrade
+          ironic-inspector-dbsync upgrade
         env:
         - name: PGAPPNAME
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
         volumeMounts:
-        - mountPath: /etc/ironic
-          name: etcironic
-        - mountPath: /etc/ironic/ironic.conf
-          name: ironic-etc
-          subPath: ironic.conf
+        - mountPath: /etc/ironic-inspector
+          name: etcironicinspector
+        - mountPath: /etc/ironic-inspector/ironic-inspector.conf
+          name: ironic-inspector-etc
+          subPath: ironic-inspector.conf
           readOnly: true
-        - mountPath: /etc/ironic/policy.json
+        - mountPath: /etc/ironic-inspector/policy.json
           name: ironic-etc
           subPath: policy.json
           readOnly: true
-        - mountPath: /etc/ironic/pxe_config.template
-          name: ironic-etc
-          subPath: pxe_config.template
-          readOnly: true
-        - mountPath: /etc/ironic/rootwrap.conf
+        - mountPath: /etc/ironic-inspector/rootwrap.conf
           name: ironic-etc
           subPath: rootwrap.conf
           readOnly: true
-        - mountPath: /etc/ironic/logging.ini
+        - mountPath: /etc/ironic-inspector/logging.ini
           name: ironic-etc
           subPath: logging.ini
           readOnly: true
       volumes:
-      - name: etcironic
+      - name: etcironicinspector
         emptyDir: {}
       - name: ironic-etc
         configMap:
           name: ironic-etc
+          defaultMode: 0444
+      - name: ironic-inspector-etc
+        configMap:
+          name: ironic-inspector-etc
           defaultMode: 0444
