added monitoring_editor role mapping to editor role

--- a/openstack/grafana-new/values.yaml
+++ b/openstack/grafana-new/values.yaml
@@ -76,6 +76,7 @@ grafana:
     ssl_mode: disable
   role:
     viewer: 'monitoring_viewer'
+    editor: 'monitoring_editor'
     admin: 'monitoring_admin'
   aes:
     key: '@/cc/secrets'
