--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -265,6 +265,23 @@ postgresql:
   backup:
     enabled: false
     image_version: v0.5.15
+    
+   # max_connections > 3 pgbouncer * default_pool_size * reserve_pool_size
+  max_connections: 500
+  shared_buffers: '4GB'
+  temp_buffers: '32MB'
+  work_mem: '64MB'
+  maintenance_work_mem: '256MB'
+  max_stack_depth: '8MB'
+  effective_cache_size: '16GB'
+  autovacuum_analyze_scale_factor: '0.02'
+  autovacuum_vacuum_scale_factor: '0.01'
+  pgbouncer:
+    enabled: true
+    config:
+      default_pool_size: 50
+      reserve_pool_size: 100
+      idle_transaction_timeout: 60
 
 sentry:
   enabled: true
