Add namespace exporter metrics

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -156,6 +156,7 @@ data:
           - '{__name__=~"^vcenter_SR17595168510$"}'
           - '{__name__=~"^webhook_.+"}'
           - '{__name__=~"^admission|daemonset|deployment|disruption|endpoint|job|namespace|petset|replicaset|serviceaccount.+"}'
+          - '{__name__=~"^ns_exporter.+"}'
           - '{job="dns-sd"}'
 
       relabel_configs:
